# linux-c-lab

./: .gitignore  CMakeLists.txt  Makefile  README.md  my_strcpy.c  my_strncpy.c
comm/: Makefile
comm/inc/: comm.h
comm/src/: Comm.c  CommManager.c
comm/tests/: basic_example.cpp  c_function_test.cpp  fixture_example.cpp  test_comm.cpp
linked_list/: Makefile  README.md  linked_list.c  linked_list.h  main  main.c
logger/: A.c  B.c  C.c  Makefile  README.md  logger.c  logger.h  main  main.c  test_logger  test_logger.c
logger/inc/: logger.h
logger/libsrc/: logger.c
logger/src/: main.c  test_logger.c
logger/tests/: test_logger.cpp
my_string/: Makefile  my_memchr.c  my_memcmp.c  my_memcpy.c  my_memmove.c  my_memset.c  my_strcat.c  my_strchr.c  my_strcmp.c  my_strcspn.c  my_string.h  my_strlen.c  my_strncmp.c  my_strpbrk.c  my_strrchr.c  my_strspn.c  my_strstr.c  my_strtok.c
